2012-11-13  Francois-Rene Rideau <tunes@google.com>

	* swank-asdf.lisp: Better ASDF support.

2012-10-19  Stas Boukarev  <stassats@gmail.com>

	* slime-fuzzy.el (slime-fuzzy-choices-buffer): Don't move position
	in the current buffer, call (slime-fuzzy-next) after switching to
	the completion buffer.

2012-10-14  Helmut Eller  <heller@common-lisp.net>

	* swank-kawa.scm: Various tweaks.

2012-08-13  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (extra-keywords/slots): Check for
	slot-definition-initfunction being present before calling
	slot-definition-initform.

2012-08-04  Stas Boukarev  <stassats@gmail.com>

	* swank-arglists.lisp (test-print-arglist): bind
	*print-right-margin* to 1000 instead of NIL, because the default
	value on ABCL is less than the length of the tested arglist.

2012-05-23  Christophe Rhodes  <csr21@cantab.net>

	* swank-media.lisp: add provide.

2012-05-04  Stas Boukarev  <stassats@gmail.com>

	* swank-fancy-inspector.lisp (emacs-inspect symbol): On SBCL,
	show information about type specifiers.

2012-04-20  John Smith <ohwoeowho@googlemail.com>

	Prettier arglists.

	* swank-mit-scheme.scm (swank:operator-arglist): Remove trailing
	newlines.

2012-04-13  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el (lisp-indent-259): If we are expecting a
	lambda-list, but don't have a list in the position, indent as if
	it was &body instead.
	* slime-cl-indent-test.txt (Test 89-90): Tests.

2012-04-13  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el (common-lisp-lambda-list-initial-value-form-p):
	Handle &AUX as well, and don't signal an error if the we don't
	have a list where expected.
	* slime-cl-indent-test.txt (Test 88): Test for indenting &AUX value
	form.

2012-04-13  Nikodemus Siivola  <nikodemus@random-state.net>

	Wrap long lines.

	* slime-cl-indent.el

2012-04-06  Stas Boukarev  <stassats@gmail.com>

	* swank-fancy-inspector.lisp (format-iso8601-time): Add 1 to the